@@ -1,5 +1,12 @@
 2006-12-17  Scott James Remnant  <scott@netsplit.com>
 
+	* upstart/wire.c (upstart_write_header, upstart_read_header): Drop
+	the version from the header, we'll just keep the protocol always
+	backwards compatible.
+	* upstart/wire.h: Update.
+	* upstart/tests/test_wire.c (test_write_header, test_read_header):
+	Check that everything works.
+
 	* upstart/wire.c (upstart_write_string, upstart_read_string):
 	Transmit the length as an unsigned, and use 0xffffffff to mean NULL
 	instead of zero so we can still transmit the empty string.
